@@ -1,11 +1,19 @@
 #ntfy.sh credentials
 #You need to define either username & password, or define an accesstoken if you want ntfy notifications
+ntfy_url=""			#Your ntfy servers URL (No backtrailing slash or topic)
 ntfy_user=""			#Your ntfy username
 ntfy_password=""		#Your ntfy password
-ntfy_accesstoken=""		#Your access token
+ntfy_accesstoken=""		#Your accesstoken
 ntfy_priority="2"		#Priority level of the notification, see: https://docs.ntfy.sh/publish/#message-priority
-ntfy_url=""			#Your ntfy servers url (No backtrailing slash or topic)
 ntfy_topic=""			#Your ntfy topic
+#################
+#ntfy.sh credentials for sending action button responses to (and for the script to read from), can be the same as above but separate topic is suggested to avoid unnecessary messages in the primary topic
+ntfy_action_url=""		#Your ntfy servers URL (No backtrailing slash or topic)
+ntfy_action_user=""		#Your ntfy username
+ntfy_action_password=""		#Your ntfy password
+ntfy_action_accesstoken=""	#Your ntfy accesstoken 
+ntfy_priority="2"		#Priority level of the notification, see: https://docs.ntfy.sh/publish/#message-priority
+ntfy_action_topic=""		#Your ntfy topic
 
 #pushover credentials
 pushover_userkey=""		#Your pushover user key
@@ -19,11 +27,12 @@ cpu_perc="true"		#Check CPU usage (Percentage)
 raid="true"		#Check if RAID is degraded
 disk_perc="true"	#Check all disk partition usage (Percentage)
 zfs="true"		#Check ZFS pool status (Healthy, degraded or offline)
+ntfy_actions="true"	#Get action buttons on ntfy (only for cpu%, ram% and load), requires ntfy_action_* credentials to be set. Requires read-write permission on the ntfy user
 
 #Thresholds at which to warn
-load_5m_threshold=0.16  # How much load before warning (Supported formats: X, X.X, X.XX)
-load_10m_threshold=2    # How much load before warning (Supported formats: X, X.X, X.XX)
-load_15m_threshold=0.18 # How much load before warning (Supported formats: X, X.X, X.XX)
+load_5m_threshold=5.01  # How much load before warning (Supported formats: X, X.X, X.XX)
+load_10m_threshold=7.1 # How much load before warning (Supported formats: X, X.X, X.XX)
+load_15m_threshold=9 # How much load before warning (Supported formats: X, X.X, X.XX)
 cpu_usage_threshold=85	# CPU usage % limit before warning (No decimal support yet)
 ram_usage_threshold=90	# Ram usage limit in % before warning (No decimal support yet)
 #Disk usage thresholds
