@@ -10,7 +10,7 @@ Checks:
 - ZFS pool status
 
 Notifications:
-- ntfy
+- ntfy (With action buttons to fetch top processes)
 - Pushover
 
 
@@ -27,4 +27,3 @@ Pushover:
 ![image](https://github.com/user-attachments/assets/7c66122b-84f6-4379-8e87-da1772f86252)
 
 ## To-do
-- Action buttons for load/ram%/cpu% to receive top processes by resource usage
