@@ -2,6 +2,7 @@
 
 source $(dirname "$0")/.env
 error_message=""
+processes=()
 
 #Check system load
 check_load() {
@@ -24,14 +25,17 @@ check_load() {
 
   if [[ "$load_5m_integral" -ge "$load_5m_threshold_integral" && "$load_5m_fractional" -ge "$load_5m_threshold_fractional" ]]; then
     error_message+="Load (5m) too high: $load_5m_integral.$load_5m_fractional\n"
+    load_var="true"
   fi
 
   if [[ "$load_10m_integral" -ge "$load_10m_threshold_integral" && "$load_10m_fractional" -ge "$load_10m_threshold_fractional" ]]; then
     error_message+="Load (10m) too high: $load_10m_integral.$load_10m_fractional\n"
+    load_var="true"
   fi
 
   if [[ "$load_15m_integral" -ge "$load_15m_threshold_integral" && "$load_15m_fractional" -ge "$load_15m_threshold_fractional" ]]; then
     error_message+="Load (15m) too high: $load_15m_integral.$load_15m_fractional\n"
+    load_var="true"
   fi
 }
 
@@ -41,6 +45,7 @@ check_cpu_perc() {
 
   if [ "$cpu_used_percentage" -gt "$cpu_usage_threshold" ]; then
     error_message+="CPU usage above limit: $cpu_used_percentage%\n"
+    cpu_var="true"
   fi
 }
 
@@ -53,6 +58,7 @@ check_memory() {
 
   if [ "$percentage_used_mem" -gt "$ram_usage_threshold" ]; then
     error_message+="RAM usage above limit: $percentage_used_mem%\n"
+    mem_var="true"
   fi
 
 }
@@ -63,6 +69,7 @@ check_raid() {
 
   if [ "$raid_status" -gt 0 ]; then
     error_message+="RAID is degraded\n"
+    raid_var="true"
   fi
 }
 
@@ -77,12 +84,14 @@ check_disk_perc() {
         disk_used=$(df -h $part | awk -F ' ' '{print $5}' | grep "%" | grep -v "Use%" | cut -f1 -d "%")
         if [ "$disk_used" -gt "$disk_usage_threshold_1_limit" ]; then
           error_message+="Disk $part is $disk_used% full\n"
+	  disk_var="true"
         fi
       done
     else
       disk_used=$(df -h $disk_usage_threshold_1 | awk -F ' ' '{print $5}' | grep "%" | grep -v "Use%" | cut -f1 -d "%")
       if [ "$disk_used" -gt "$disk_usage_threshold_1_limit" ]; then
         error_message+="Disk $disk_usage_threshold_1 is $disk_used% full\n"
+	disk_var="true"
       fi
     fi
   fi
@@ -96,12 +105,14 @@ check_disk_perc() {
         disk_used=$(df -h $part | awk -F ' ' '{print $5}' | grep "%" | grep -v "Use%" | cut -f1 -d "%")
         if [ "$disk_used" -gt "$disk_usage_threshold_2_limit" ]; then
           error_message+="Disk $part is $disk_used% full\n"
+ 	  disk_var="true"
         fi
       done
     else
       disk_used=$(df -h $disk_usage_threshold_2 | awk -F ' ' '{print $5}' | grep "%" | grep -v "Use%" | cut -f1 -d "%")
       if [ "$disk_used" -gt "$disk_usage_threshold_2_limit" ]; then
         error_message+="Disk $disk_usage_threshold_2 is $disk_used% full\n"
+	disk_var="true"
       fi
     fi
   fi
@@ -115,12 +126,14 @@ check_disk_perc() {
         disk_used=$(df -h $part | awk -F ' ' '{print $5}' | grep "%" | grep -v "Use%" | cut -f1 -d "%")
         if [ "$disk_used" -gt "$disk_usage_threshold_3_limit" ]; then
           error_message+="Disk $part is $disk_used% full\n"
+	  disk_var="true"
         fi
       done
     else
       disk_used=$(df -h $disk_usage_threshold_3 | awk -F ' ' '{print $5}' | grep "%" | grep -v "Use%" | cut -f1 -d "%")
       if [ "$disk_used" -gt "$disk_usage_threshold_3_limit" ]; then
         error_message+="Disk $disk_usage_threshold_3 is $disk_used% full\n"
+	disk_var="true"
       fi
     fi
   fi
@@ -133,6 +146,7 @@ check_zfs_pool() {
     state=$(zpool status "$pool_name" | grep state | awk -F 'state: ' '{print $2}')
       if ! [ "$state" == "ONLINE" ]; then
         error_mesage+="$pool_name is $state\n"
+	zfs_var="true"
       fi
   done
 }
@@ -142,18 +156,69 @@ send_ntfy() {
   if [[ "$error_message" && "$ntfy_priority" && "$ntfy_url" && "$ntfy_topic" ]]; then
     if [[ "$ntfy_user" && "$ntfy_password" ]]; then
 
-	curl -H "Content-Type: application/json" \
-	     -u "$ntfy_user:$ntfy_password" \
-	     -d "$(ntfy_message)" \
-	     $ntfy_url
+	if [ "$ntfy_actions" == "true" ]; then
+	  if [[ "$ntfy_action_password" && ("$cpu_var" == "true" || "$mem_var" == "true" || "$load_var" == "true") ]]; then
+                ntfy_action_base64=$(echo -n "$ntfy_action_user:$ntfy_action_password" | base64)
+		ntfy_action_auth=$(echo -n "Basic $ntfy_action_base64" | base64 | tr -d '=')
+		curl -H "Content-Type: application/json" \
+		     -H "Actions: http, Show processlist, $ntfy_action_url/$ntfy_action_topic/publish?message=Show+processes&priority=$ntfy_action_priority&auth=$ntfy_action_auth, method=GET" \
+		     -u "$ntfy_user:$ntfy_password" \
+		     -d "$(ntfy_message)" \
+		     $ntfy_url
+		     start_listener
+	  elif [[ "$ntfy_action_accesstoken" && ("$cpu_var" == "true" || "$mem_var" == "true" || "$load_var" == "true") ]]; then
+		ntfy_action_auth=$(echo -n "Bearer $ntfy_action_accesstoken" | base64 | tr -d '=')
+		curl -H "Content-Type: application/json" \
+		     -H "Actions: http, Show processlist, $ntfy_action_url/$ntfy_action_topic/publish?message=Show+processes&priority=$ntfy_action_priority&auth=$ntfy_action_auth, method=GET" \
+		     -u "$ntfy_user:$ntfy_password" \
+		     -d "$(ntfy_message)" \
+		     $ntfy_url
+		     start_listener
+	  else
+		curl -H "Content-Type: application/json" \
+		     -u "$ntfy_user:$ntfy_password" \
+		     -d "$(ntfy_message)" \
+		     $ntfy_url
+	  fi
+	else
+	  curl -H "Content-Type: application/json" \
+	       -u "$ntfy_user:$ntfy_password" \
+	       -d "$(ntfy_message)" \
+	       $ntfy_url
+        fi
 
-    elif [[ -v "$ntfy_accesstoken" ]]; then
 
-	curl -H "Content-Type: application/json" \
-	     -H "Authorization: Bearer $ntfy_accesstoken" \
-	     -d "$(ntfy_message)" \
-	     $ntfy_url
-
+    elif [[ "$ntfy_accesstoken" ]]; then
+	if [ "$ntfy_actions" == "true" ]; then
+	  if [[ "$ntfy_action_password" && ("$cpu_var" == "true" || "$mem_var" == "true" || "$load_var" == "true") ]]; then
+                ntfy_action_base64=$(echo -n "$ntfy_action_user:$ntfy_action_password" | base64)
+		ntfy_action_auth=$(echo -n "Basic $ntfy_action_base64" | base64 | tr -d '=')
+		curl -H "Content-Type: application/json" \
+		     -H "Actions: http, Show processlist, $ntfy_action_url/$ntfy_action_topic/publish?message=Show+processes&priority=$ntfy_action_priority&auth=$ntfy_action_auth, method=GET" \
+		     -H "Authorization: Bearer $ntfy_accesstoken" \
+		     -d "$(ntfy_message)" \
+		     $ntfy_url
+		     start_listener
+	  elif [[ "$ntfy_action_accesstoken" && ("$cpu_var" == "true" || "$mem_var" == "true" || "$load_var" == "true") ]]; then
+		ntfy_action_auth=$(echo -n "Bearer $ntfy_action_accesstoken" | base64 | tr -d '=')
+		curl -H "Content-Type: application/json" \
+		     -H "Actions: http, Show processlist, $ntfy_action_url/$ntfy_action_topic/publish?message=Show+processes&priority=$ntfy_action_priority&auth=$ntfy_action_auth, method=GET" \
+		     -H "Authorization: Bearer $ntfy_accesstoken" \
+		     -d "$(ntfy_message)" \
+		     $ntfy_url
+		     start_listener
+	  else
+		curl -H "Content-Type: application/json" \
+                     -H "Authorization: Bearer $ntfy_accesstoken" \
+                     -d "$(ntfy_message)" \
+                     $ntfy_url
+	  fi
+	else
+	  curl -H "Content-Type: application/json" \
+               -H "Authorization: Bearer $ntfy_accesstoken" \
+               -d "$(ntfy_message)" \
+               $ntfy_url
+	fi
     fi
   fi
 }
@@ -164,6 +229,52 @@ send_pushover() {
         curl -s --form-string "token=$pushover_apptoken" --form-string "user=$pushover_userkey" --form-string "message=$(echo -e $error_message)" https://api.pushover.net/1/messages.json
   fi
 }
+
+send_processlist() {
+  if [[ "$ntfy_priority" && "$ntfy_url" && "$ntfy_topic" ]]; then
+    if [[ "$ntfy_user" && "$ntfy_password" ]]; then
+
+	curl -H "Content-Type: application/json" \
+	     -u "$ntfy_user:$ntfy_password" \
+	     -d "$(ntfy_message_processes)" \
+	     $ntfy_url
+
+    elif [[ "$ntfy_accesstoken" ]]; then
+
+	curl -H "Content-Type: application/json" \
+	     -H "Authorization: Bearer $ntfy_accesstoken" \
+	     -d "$(ntfy_message_processes)" \
+	     $ntfy_url
+    fi
+  fi
+}
+
+poll_ntfy() {
+  if [ "$ntfy_action_password" ]; then
+    ntfy_action_base64=$(echo -n "$ntfy_action_user:$ntfy_action_password" | base64)
+    ntfy_action_auth=$(echo -n "Basic $ntfy_action_base64" | base64 | tr -d '=')
+    ntfy_poll=$(curl -H "Content-Type: application/json" -H "Accept: application/json" -X GET -s "$ntfy_action_url/$ntfy_action_topic/json?poll=1&auth=$ntfy_action_auth" | sed 's_Show+processlist__' | sed 's_Show+processes__' | grep "Show processes" | cut -f1 -d ',' | cut -f2 -d ':' | tr -d '"')
+  elif [ "$ntfy_action_accesstoken" ]; then
+    ntfy_action_auth=$(echo -n "Bearer $ntfy_action_accesstoken" | base64 | tr -d '=')
+    ntfy_poll=$(curl -H "Content-Type: application/json" -H "Accept: application/json" -X GET -s "$ntfy_action_url/$ntfy_action_topic/json?poll=1&auth=$ntfy_action_auth" | sed 's_Show+processlist__' | sed 's_Show+processes__' | grep "Show processes" | cut -f1 -d ',' | cut -f2 -d ':' | tr -d '"')
+  fi
+  if [ "$ntfy_poll" ]; then
+    echo "$ntfy_poll" | while IFS= read -r id ; do
+      if [ $(cat $(dirname "$0")/log.txt | grep $id) ]; then
+        continue;
+      else
+        echo "$id" >> $(dirname "$0")/log.txt
+	process_list=$(top -bn1 -o %CPU -i | tail -n +7 | awk '{print $9"% ", $10"% ", $12}' | sed 's_%CPU%_CPU%_' | sed 's_%MEM%_MEM%_')
+	while IFS= read -r process; do
+	  processes+=$(echo "$process")
+	  processes+=" \n"
+	done <<< "$process_list"
+	send_processlist
+      fi
+    done
+  fi
+}
+
 
 #Run the functions based on their .env value
 if [ "$load" == "true" ]; then
@@ -201,6 +312,33 @@ ntfy_message() {
 EOF
 }
 
+ntfy_message_processes() {
+  cat <<EOF
+{
+  "topic": "$ntfy_topic",
+  "tags": ["magic_wand"],
+  "title": "System Checkup",
+  "message": "$processes"
+}
+EOF
+}
+
+start_listener() {
+while :
+  do
+    for i in $(seq 1 18); do
+      poll_ntfy
+      if [ -n "$processes" ]; then
+        break;
+      else
+        sleep 5
+      fi
+    done
+    break;
+  done
+}
+
 send_ntfy
 send_pushover
 
+poll_ntfy
